--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,8 +22,20 @@
   }
 } */
 
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-primario {
+  @apply border-2 border-red-jamar  py-2 px-4 rounded-full cursor-pointer hover:bg-red-jamar hover:text-white transition-all duration-300 outline-0 focus:ring-2 focus:ring-offset-2 focus:ring-red-jamar/65;
+}
+
+a {
+  @apply rounded-xl transition-all duration-300 outline-0 focus:ring-2 focus:ring-offset-4 focus:ring-red-jamar/65;
 }
