Modal subida de imagenes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,13 +50,15 @@ a {
   --slide-spacing: 1rem;
   --slide-size: 70%;
 }
+
 .embla__viewport {
   overflow: hidden;
 }
+
 .embla__container {
   display: flex;
   touch-action: pan-y pinch-zoom;
-  margin-left: calc(var(--slide-spacing) * -1);
+  /* margin-left: calc(var(--slide-spacing) * -1); */
 }
 .embla__controls {
   display: grid;
